fix: mobile overflow & unable touchaction

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,8 @@
   margin: 0;
   padding: 0;
   box-sizing: content-box;
+  touch-action: none;
+  overflow: hidden;
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
 }
